Host and remote app

--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -15,7 +15,8 @@
       "@/*": ["src/*"],
     },
     "allowUnreachableCode": false,
-    "declaration": false,
+    "declaration": true,
+    "declarationDir": "./types",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
