--- a/packages/remote/tsconfig.json
+++ b/packages/remote/tsconfig.json
@@ -13,9 +13,11 @@
     "target": "es5",
     "paths": {
       "@/*": ["src/*"],
+      "moduleRemote": ["../remote/dist/@mf-types/*"]
     },
     "allowUnreachableCode": false,
-    "declaration": false,
+    "declaration": true,
+    "declarationDir": "./types",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
