--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -16,7 +16,7 @@
     },
     "allowUnreachableCode": false,
     "declaration": true,
-    "declarationDir": "./types",
+    "declarationDir": "../../node_modules/@types/module-host",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
