--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -35,6 +35,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "ts-loader": "^9.4.2",
+    "ts-transform-paths": "^3.0.0",
     "typescript": "^5.0.4",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
