--- a/packages/remote/tsconfig.json
+++ b/packages/remote/tsconfig.json
@@ -13,11 +13,10 @@
     "target": "es5",
     "paths": {
       "@/*": ["src/*"],
-      "moduleRemote": ["../remote/dist/@mf-types/*"]
     },
     "allowUnreachableCode": false,
     "declaration": true,
-    "declarationDir": "./types",
+    "declarationDir": "../../node_modules/@types/module-remote",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
